2014-1-18 <JDT>
   Added beam regions to MeasureFunction, correspondingly renamed functions to have jet and beam regions
   Renamed functions in TauComponents for consistency with MeasureFunction
   Adding debugging code to AxesFinderFromOnePassMinimization::getAxes
   Worked extensively on example.cc to make sure that it tests all available options.
   Rewrote PrintJets command in example.cc for later improvements
   Converted some magic numbers to std::numeric_limits<double>::max()
2014-1-17 <JDT>
   Rewrote KMeansMinimization to call OnePassMinimization, adding noise explicitly.
   Removed any nothing of noise from OnePassMinimization
   Removed Double32_t for root usage is Nsubjettiness
   Removed most of the TJW flags, after checking that the code was sensible
   Clean up of many comments throughout the code, updating of README file
   Removed unnecessary establishAxes in Njettiness
   Removed bare constructor for Njettiness to avoid incompatibility with enum choices, may reinstate later.  Also removed setMeasureFunction, setAxesFinder for same reason
   NjettinessExtras now calls TauComponents
2014-1-16 <TJ>
   Moved minimization functions to OnePassMinimization, changed KMeansMinimization class to simply call OnePassMinimization a specified number of times
   Added extra tau function in TauComponents for users to get tau directly
   Changed radius parameter in AxesFinderFromExclusiveJet subclasses to use max_allowable_R
   Updated example.ref to account for changes due to change in radius parameter
2014-1-15 <TJ>
   Changed NjettinessComponents to TauComponents
   Updated MeasureFunction with "result" function that returns TauComponents object
   TauComponents changed to calculate all tau components given subtaus_numerator and tau_denominator
   Njettiness updated to return TauComponents object rather than individual components
   Nsubjettiness and NjettinessPlugin updated to have option for 4th parameter
2014-1-14 <TJ>