@@ -1,3 +1,5 @@
+2014-1-24 <JDT>
+   Added access to currentAxes from Nsubjettiness.
 2014-1-18 <JDT>
    Added beam regions to MeasureFunction, correspondingly renamed functions to have jet and beam regions
    Renamed functions in TauComponents for consistency with MeasureFunction
